# ocalcli

./: .cursorrules  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  demo.py  pyproject.toml
ocalcli/: __init__.py  _version.py  cli.py  config.py  exceptions.py  models.py  quickadd.py  timeutils.py
ocalcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ocalcli/auth/: __init__.py  outlook_auth.py
ocalcli/providers/: __init__.py  base.py  google.py  outlook.py
tests/: test_models.py  test_quickadd.py  test_timeutils.py
